# PingPong

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  README_RU.md  main.cpp  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Core/App/: AppContext.cpp  AppContext.h  Application.cpp  Application.h  ApplicationDefaults.h  EngineServices.h  FatalErrorReport.cpp  IGame.h  Timer.cpp  Timer.h
Core/Assets/: AssetCache.cpp  AssetCache.h  AssetPathResolver.cpp  AssetPathResolver.h
Core/Audio/: AudioSystem.cpp  AudioSystem.h
Core/Common/: Constants.h  Types.h
Core/Display/: Viewport.cpp  Viewport.h  Window.cpp
Core/Gameplay/: CollisionDebugDraw.cpp  CollisionDebugDraw.h  CollisionSystem.cpp  CollisionSystem.h  Entity.cpp  Entity.h  EntityId.h  GameplayComponents.h  ISceneSystem.cpp  ISceneSystem.h  RenderSystem.cpp  RenderSystem.h  Scene.cpp  Scene.h  SceneCollisionTypes.h  TransformSystem.cpp  TransformSystem.h  VelocityIntegrationSystem.cpp  VelocityIntegrationSystem.h
Core/Graphics/: Camera.cpp  Camera.h  Color.h  D3d11Helpers.h  FollowCamera.cpp  FollowCamera.h  FpsCamera.cpp  FpsCamera.h  GraphicsDevice.cpp  GraphicsDevice.h  MeshData.h  MeshGenerator.cpp  MeshGenerator.h  MeshLitData.h  ModelAsset.cpp  ModelAsset.h  ModelAssetAssimp.cpp  ModelRenderer.cpp  ModelRenderer.h  OrbitCamera.cpp  OrbitCamera.h  PrimitiveRenderer3D.cpp  PrimitiveRenderer3D.h  RenderContext.cpp  RenderContext.h  ShaderCompiler.cpp  ShaderCompiler.h  Texture2DAsset.cpp  Texture2DAsset.h
Core/Graphics/Debug/: DebugDrawQueue.cpp  DebugDrawQueue.h
Core/Graphics/Particles/: GpuParticleSystem.cpp  GpuParticleSystem.h  GpuParticleTypes.h
Core/Graphics/Picking/: GBufferPickingService.cpp  GBufferPickingService.h
Core/Graphics/Rendering/: FrameRenderTypes.h  FrameRenderer.cpp  FrameRenderer.h  PrimitiveRenderer3D.cpp  PrimitiveRenderer3D.h  RenderContext.cpp  RenderContext.h  ShapeRenderer2D.cpp  ShapeRenderer2D.h
Core/Graphics2D/: ShapeRenderer2D.cpp  ShapeRenderer2D.h
Core/Input/: InputSystem.cpp  InputSystem.h  Keyboard.cpp  Keyboard.h  MiniGameDebugNavigation.h  RawInputHandler.cpp  RawInputHandler.h
Core/Math/: MathHelpers.h  SpatialMath.h  Transform2D.cpp  Transform2D.h  Transform3D.cpp  Transform3D.h
Core/Physics/: AABB.h  BoundingSphere.h  Collision3D.cpp  Collision3D.h  CollisionFoundation.h  CollisionSystem.cpp  CollisionSystem.h  HorizontalBoundsExit.h  PlaneConstraint.cpp  PlaneConstraint.h
Core/Physics/Collision2D/: AABB2D.h  Circle2D.h  CollisionContact2D.h  CollisionQueries2D.cpp  CollisionQueries2D.h  HorizontalBoundsExit.h
Core/Physics/Collision3D/: AxisAlignedBox3D.h  BoundingSphere3D.h  CollisionContact3D.h  CollisionQueries3D.cpp  CollisionQueries3D.h
Core/Platform/: Window.cpp  Window.h
Core/Render/: Color.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  SpriteBatch2D.cpp  SpriteBatch2D.h  Vertex.h
Core/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  Transform2D.cpp  Transform2D.h
Core/Scene/Components/: Collider2D.h  MovementComponent.h  RenderComponent2D.h
Core/Shaders/: BasicPS.hlsl  BasicVS.hlsl  DeferredGeometry3D.hlsl  DeferredLighting3D.hlsl  ForwardPhong3D.hlsl  GBufferDebugComposite3D.hlsl  GpuParticlesBitonicSortCS.hlsl  GpuParticlesDraw3D.hlsl  GpuParticlesUpdateCS.hlsl  ShadowSamplingCSM.hlsli  Shape2D.hlsl
Core/UI/: BitmapFont.cpp  BitmapFont.h  Button.cpp  Button.h  Switcher.cpp  Switcher.h
Core/UI/Common/: MouseState.h  RectF.h  UITheme.h
Core/UI/Widgets/: CollapsibleSection.cpp  CollapsibleSection.h  SliderWidget.cpp  SliderWidget.h
Game/: Game.cpp  Game.h  GameRules.cpp  PongScene.cpp  PongScene.h
Game/AI/: PaddleAI.cpp
Game/Katamari/: KatamariGame.cpp  KatamariGame.h  KatamariLevelSetup.cpp  KatamariLevelSetup.h  KatamariScene.cpp  KatamariScene.h  KatamariSceneLighting.cpp  KatamariSceneLighting.h  KatamariTypes.h
Game/Katamari/Components/: PickupVisualComponent.h  SphereColliderComponent.h  VelocityComponent.h
Game/Katamari/Data/: KatamariGameConfig.h  KatamariPickupCatalog.cpp  KatamariPickupCatalog.h  KatamariWorldContext.h  PickupArchetype.h
Game/Katamari/Entities/: KatamariBall.cpp  KatamariBall.h  LevelBounds.cpp  LevelBounds.h  PickupItem.cpp  PickupItem.h
Game/Katamari/Systems/: KatamariAbsorptionSystem.cpp  KatamariAbsorptionSystem.h  KatamariBallControllerSystem.cpp  KatamariBallControllerSystem.h  KatamariBallRollSystem.cpp  KatamariBallRollSystem.h  KatamariCameraController.cpp  KatamariCameraController.h  KatamariMovementSystem.cpp  KatamariMovementSystem.h  KatamariProgressionSystem.cpp  KatamariProgressionSystem.h  KatamariSpawner.cpp  KatamariSpawner.h  KatamariSphereWorldResolveSystem.cpp  KatamariSphereWorldResolveSystem.h
Game/Katamari/UI/: KatamariHud.cpp  KatamariHud.h  KatamariParticleSettingsPanel.cpp  KatamariParticleSettingsPanel.h
Game/LightingTest/: LightingTestGame.cpp  LightingTestGame.h
Game/MainMenu/: MainMenuGame.cpp
Game/Objects/: Ball.cpp  Ball.h  CenterLine.cpp  CenterLine.h  Paddle.cpp  Paddle.h  PlayField.cpp  PlayField.h  ScoreBoard.cpp  ScoreBoard.h  Wall.cpp  Wall.h
Game/Pong/: GameRules.cpp  GameRules.h  PongGame.cpp  PongGame.h  PongScene.cpp  PongTypes.h
Game/Pong/AI/: PaddleAI.h
Game/Pong/Components/: Collider2D.h  MovementComponent.h  RenderRectComponent.h  Transform2D.h
Game/Pong/Entities/: Ball.cpp  Ball.h  CenterLine.cpp  Paddle.cpp  Paddle.h  PlayField.cpp  ScoreBoard.cpp  Wall.cpp  Wall.h
Game/Pong/Systems/: PaddleAI.cpp  PaddleAI.h  PongCollisionSystem.cpp  PongCollisionSystem.h  PongRules.cpp  PongRules.h
Game/Pong/UI/: PongUI.cpp
Game/SolarSystem/: SolarSystemGame.cpp  SolarSystemGame.h  SolarSystemScene.cpp  SolarSystemScene.h
Game/SolarSystem/Entities/: OrbitalBody.h
Game/SolarSystem/Rendering/: SpaceBackdropRenderer.cpp  SpaceBackdropRenderer.h
Game/SolarSystem/Systems/: OrbitMath.cpp  OrbitMath.h  SolarSystemEngineAudioController.cpp  SolarSystemEngineAudioController.h  SolarSystemTuning.h
Game/SolarSystem/UI/: SolarSystemSettingsPanel.cpp  SolarSystemSettingsPanel.h
(+45 files in other folders)
